# SW_SBOM_Enrichment

./: README.md  SbomEnrichment.py  action.yml  pyproject.toml
test_data/: enrichment.json  sbom_minimal_app_cpp.cdx.json
