[project]
name = "sbom_enrichment"
version = "0.3.0"
description = "Helper tool for SBOM enrichment"
authors = [
    {name = "MAB",email = "support@commonplacerobotics.de"}
]
readme = "README.md"
requires-python = ">=3.9.2"
license = "MIT"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line-length = 160
